--- a/src/view/Dashboard/Sell/style.css
+++ b/src/view/Dashboard/Sell/style.css
@@ -16,7 +16,18 @@
             align-items: center;
             height: 100vh;
 }
-
+.btns{
+    color:  white !important;
+}
+.btns li{
+    color:  white !important;
+    border: 1px solid black;
+  border-radius: 11px;
+  margin: 2px;
+}
+.btns input{
+    margin: 10px;
+}
 .h3 {
     color: #3498db;
     text-align: center;
