--- a/src/view/Detail/profile/map/style.css
+++ b/src/view/Detail/profile/map/style.css
@@ -1,8 +1,10 @@
-.map{
-    position: absolute;
-    width: 414px !important;
-    height: 40% !important;
+.map {
     z-index: -1;
-    margin-top: 58px;
+    margin-left: -545px;
     box-shadow: 1px 1px 1px 1px;
+    height: 57vh;
+    width: 70vw;
+    position: relative;
+    outline-style: none;
+    margin-top: 36px;
 }
